--- a/MSGViewWPF/App.xaml
+++ b/MSGViewWPF/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="MedievalStrategyGameWPF.App"
+﻿<Application x:Class="MSGViewWPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MedievalStrategyGameWPF"
+             xmlns:local="clr-namespace:MSGViewWPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
